<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white_color"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:src="@drawable/gajamove_text"
        android:layout_centerHorizontal="true"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        >

        <TextView
            android:fontFamily="@font/heading_one"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="left"
            android:textColor="@color/black_color"
            android:textSize="30dp"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="20dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:orientation="horizontal"
                    android:background="@drawable/grey_rect_empty"
                    >



                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/mail"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="2dp"


                        />
                    <customer.gajamove.com.gajamove_customer.custom.CustomEditText
                        android:fontFamily="@font/body_one"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:textColor="@color/black_color"
                        android:textStyle="normal"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/email"
                        android:background="@null"
                        android:imeOptions="actionNext"
                        android:id="@+id/username"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/grey_rect_empty"
                    >
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/lock"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"

                        />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:fontFamily="@font/body_one"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="16dp"
                            android:textColor="@color/black_color"
                            android:textStyle="normal"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:background="@null"
                            android:imeOptions="actionDone"
                            android:id="@+id/password"
                            android:layout_marginLeft="10dp"
                            />

                        <ImageView
                            android:id="@+id/show_hide_icon_btn"
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/hide_pass_icon"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:layout_alignParentRight="true"
                            android:tint="@color/light_black_color"

                            />
                    </RelativeLayout>

                </LinearLayout>

                <customer.gajamove.com.gajamove_customer.custom.CustomTextView
                    android:fontFamily="@font/body_one"
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:layout_gravity="left"
                    android:text="@string/forgot_pass"
                    android:textColor="@color/theme_primary"
                    android:textSize="12dp" />


                <customer.gajamove.com.gajamove_customer.custom.CustomFontButton
                    android:fontFamily="@font/body_two"
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/next_btn_drawable"
                    android:textSize="16dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white_color"
                    android:elevation="5dp"
                    android:textAllCaps="false"
                    android:text="@string/sign_in"/>


                <include layout="@layout/fb_gmail_sign_in"
                    />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:id="@+id/redirect_sign_up"
                    >
                    <customer.gajamove.com.gajamove_customer.custom.CustomTextView
                        android:fontFamily="@font/body_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="end"
                        android:text="@string/didnt_have_account"
                        android:textColor="@color/black_color"
                        android:textSize="16dp" />
                    <customer.gajamove.com.gajamove_customer.custom.CustomTextView
                        android:fontFamily="@font/body_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="end"
                        android:text="@string/sign_up"
                        android:textColor="@color/theme_primary"
                        android:layout_marginLeft="10dp"
                        android:textSize="16dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>



    </LinearLayout>

</RelativeLayout>
