<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white_color"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_height="match_parent"
        >

        <TextView
            android:fontFamily="@font/heading_one"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_color"
            android:textSize="30dp"
            android:text="@string/change_pass"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="20dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:background="@drawable/grey_rect_empty"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/lock"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"


                    />
                <EditText
                    android:fontFamily="@font/body_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:textColor="@color/black_color"
                    android:textStyle="normal"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/old_pass"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:id="@+id/old_password"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:background="@drawable/grey_rect_empty"
                android:layout_marginTop="10dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/lock"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"


                    />
                <EditText
                    android:fontFamily="@font/body_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:textColor="@color/black_color"
                    android:textStyle="normal"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/new_pass"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:id="@+id/password"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:background="@drawable/grey_rect_empty"
                android:layout_marginTop="10dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/lock"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"


                    />
                <EditText
                    android:fontFamily="@font/body_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:textColor="@color/black_color"
                    android:textStyle="normal"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/c_pass"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:id="@+id/confirm_pass"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>


            <Button
                android:fontFamily="@font/body_two"
                android:id="@+id/create_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/next_btn_drawable"
                android:textSize="18dp"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:textColor="@color/white_color"
                android:elevation="5dp"
                android:text="@string/create_password"/>


        </LinearLayout>


    </LinearLayout>
</RelativeLayout>