<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white_color"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_height="match_parent"
        >

        <TextView
            android:fontFamily="@font/heading_one"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_color"
            android:textSize="30dp"
            android:text="@string/verification"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            />
        <customer.gajamove.com.gajamove_customer.custom.CustomTextView
            android:fontFamily="@font/body_one"
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="start"
            android:layout_marginLeft="20dp"
            android:text="@string/code_message"
            android:textColor="@color/dark_gray_color"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            >

            <com.jkb.vcedittext.VerificationCodeEditText
                android:id="@+id/verification_code_input"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:inputType="number"
                android:textColor="@color/black_color"
                android:textSize="30sp"
                app:bottomLineHeight="2dp"
                android:hint="000000"
                android:visibility="gone"
                app:bottomLineNormalColor="@color/black_color"
                app:bottomLineSelectedColor="@color/theme_primary"
                app:figures="4"
                app:selectedBackgroundColor="@android:color/transparent"
                app:verCodeMargin="10dp" />



            <customer.gajamove.com.gajamove_customer.custom.PinView
                android:id="@+id/firstPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:layout_gravity="center"
                android:inputType="number"
                android:padding="5dp"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cursorColor="@color/theme_primary"
                app:cursorWidth="2dp"
                app:itemCount="5"
                app:itemHeight="50dp"
                app:itemRadius="4dp"
                app:itemSpacing="5dp"
                app:itemWidth="45dp"
                app:lineColor="@color/light_gray_color"
                app:lineWidth="2dp"
                app:viewType="rectangle"/>



            <Button
                android:fontFamily="@font/body_two"
                android:id="@+id/verify"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/next_btn_drawable"
                android:textSize="18dp"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:textColor="@color/white_color"
                android:elevation="5dp"
                android:text="@string/verify"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:id="@+id/redirect_sign_in"
                >

                <customer.gajamove.com.gajamove_customer.custom.CustomTextView
                    android:fontFamily="@font/body_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:id="@+id/resend_code"
                    android:text="@string/resend_code"
                    android:textColor="@color/theme_primary"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>